--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,10 @@ workspace:
   path: src/github.com/Adaptech/letseventsource
 
 pipeline:
+  prerequisites:
+    image: golang:latest
+    commands:
+      - apt-get install hugo
   build:
     image: golang:latest
     commands:
