--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,9 @@ pipeline:
   build:
     image: golang:latest
     commands:
-      - make install-hugo
+      - go get github.com/magefile/mage
+      - go get -d github.com/gohugoio/hugo
+      - cd src/github.com/gohugoio/hugo && mage vendor && mage install
       - cd docs && make all
 
 
